@@ -11,7 +11,8 @@
 <div id="container">
   <div id="menu">
     <ul>
-      <li><%= link_to "business overview", documentation_features_path, :class => "business highlighted" %></li>
+      <li><%= link_to "business overview", documentation_features_path,
+                      :class => "business#{highlight('business_overview')}" %></li>
       <!--<li><%#= link_to "development overview", documentation_kanban_path, :class => "development" %></li>-->
     </ul>
   </div>
