@@ -1,3 +1,4 @@
+* menu items highlighting
 * in aggregate report also displaying scenarios
 * fix colspan spelling
 * fix correct paths to assests
